[package]
name = "scanner-ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common"}
scanner = { path = "../../scanner"}

ffi-support = "~0"
function_name = "~0"
log = "~0"

[lib]
name = "scanner_ffi"
crate-type = ["cdylib", "staticlib"]